--- a/_posts/2024-05-19-NhKMM.html
+++ b/_posts/2024-05-19-NhKMM.html
@@ -3,9 +3,14 @@ title: "«اصفهان؛ تجربه‌ی معماری و شهر در آغاز ع
 authors: asmaneh 
 types: bap 
 categories: book 
-tags: اصفهان,عصر مدرن,عصر مدرن ایران,شهر,تاریخ شهر,تاریخ اصفهان,تاریخ مدرن اصفهان,اصفهان مدرن,تاریخ شهر اصفهان,آسمانه,مطالعات معماری ایران,فرشید امامی 
+tags: اصفهان,عصر,مدرن,ایران,شهر,تاریخ,آسمانه,مطالعات,معماری,فرشید,امامی 
 featured: false
+featureImg: "/assets/img/posts/NhKMM.jpg" 
 slug: NhKMM 
+gallery: 
+- image_path: "/assets/img/posts/NhKMM.jpg" 
+  title: "«اصفهان؛ تجربه‌ی معماری و شهر در آغاز عصر مدرن ایران» | فرشید امامی" 
+ 
 excerpt: "شهر اصفهان، زیستگاهِ شهریِ سرزنده‌ای از دوران قرون وسطا و مقر سلطنتی سلسله‌ی صفویان، در قرن هفدهم میلادی در جایگاه کلان‌شهری عظیم ظاهر شد. در این کتاب، با بهره از منابع اصلی، فضاها و حس‌های این شهر پویا بازسازی می‌شود." 
 --- 
 <p><strong>&laquo;اصفهان؛ تجربه&zwnj;ی معماری و شهر در آغاز عصر مدرن ایران&raquo;</strong></p>
