--- a/_posts/2024-06-23-vxKp2.html
+++ b/_posts/2024-06-23-vxKp2.html
@@ -1,8 +1,9 @@
 --- 
 title: "از آتروپاتن باستان تا آذربایجان و کردستان؛ بخش‌هایی از تاریخ کهن ایران | عباس جوادی" 
 authors: asmaneh 
-types: news 
-tags: آتروپان,آتروپان باستان,آذربایجان,کردستان,تاریخ ایران,تاریخ کهن ایران,عباس جوادی,آسمانه,مطالعات معماری ایران 
+types: bap 
+categories: book 
+tags: آتروپان,باستان,آذربایجان,کردستان,تاریخ,ایران,کهن,عباس,جوادی,آسمانه,مطالعات,معماری 
 featured: false
 featureImg: "/assets/img/posts/vxKp2.jpg" 
 slug: vxKp2 
@@ -21,4 +22,4 @@ excerpt: "«آتروپاتن»، که ریشه‌ی نام آذربایجان ا
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>اطلاعات بیشتر درباره&zwnj;ی کتاب:</p>
-<p dir="ltr"><a href="https://morvarid.pub/%D8%A7%D8%B2%20%D8%A2%D8%AA%D8%B1%D9%88%D9%BE%D8%A7%D8%AA%D9%86%20%D8%A8%D8%A7%D8%B3%D8%AA%D8%A7%D9%86%20%D8%AA%D8%A7%20%D8%A2%D8%B0%D8%B1%D8%A8%D8%A7%DB%8C%D8%AC%D8%A7%D9%86%20%D9%88%20%DA%A9%D8%B1%D8%AF%D8%B3%D8%AA%D8%A7%D9%86" target="_blank" rel="noopener">https://morvarid.pub/%D8%A7%D8%B2%20%D8%A2%D8%AA%D8%B1%D9%88%D9%BE%D8%A7%D8%AA%D9%86%20%D8%A8%D8%A7%D8%B3%D8%AA%D8%A7%D9%86%20%D8%AA%D8%A7%20%D8%A2%D8%B0%D8%B1%D8%A8%D8%A7%DB%8C%D8%AC%D8%A7%D9%86%20%D9%88%20%DA%A9%D8%B1%D8%AF%D8%B3%D8%AA%D8%A7%D9%86</a></p>
+<p dir="ltr" style="text-align: left;"><a href="https://morvarid.pub/%D8%A7%D8%B2%20%D8%A2%D8%AA%D8%B1%D9%88%D9%BE%D8%A7%D8%AA%D9%86%20%D8%A8%D8%A7%D8%B3%D8%AA%D8%A7%D9%86%20%D8%AA%D8%A7%20%D8%A2%D8%B0%D8%B1%D8%A8%D8%A7%DB%8C%D8%AC%D8%A7%D9%86%20%D9%88%20%DA%A9%D8%B1%D8%AF%D8%B3%D8%AA%D8%A7%D9%86" target="_blank" rel="noopener">https://morvarid.pub/%D8%A7%D8%B2%20%D8%A2%D8%AA%D8%B1%D9%88%D9%BE%D8%A7%D8%AA%D9%86%20%D8%A8%D8%A7%D8%B3%D8%AA%D8%A7%D9%86%20%D8%AA%D8%A7%20%D8%A2%D8%B0%D8%B1%D8%A8%D8%A7%DB%8C%D8%AC%D8%A7%D9%86%20%D9%88%20%DA%A9%D8%B1%D8%AF%D8%B3%D8%AA%D8%A7%D9%86</a></p>
