--- a/_posts/2024-06-18-W4gtB.html
+++ b/_posts/2024-06-18-W4gtB.html
@@ -4,7 +4,12 @@ authors: mqayoomi
 types: blog 
 tags: تاریخ,معماری,کتاب‌نگاشت,توضیحی,نظریه,هنر,آسمانه,مطالعات,ایران 
 featured: true
+featureImg: "/assets/img/posts/W4gtB.jpg" 
 slug: W4gtB 
+gallery: 
+- image_path: "/assets/img/posts/W4gtB.jpg" 
+  title: " تاریخ معماری چیست؟(۲) | (پاره‌ای دیگر از کتاب‌نگاشت توضیحی نظریه‌های تاریخ معماری و هنر)" 
+ 
 excerpt: "رویکرد دیگر جغرافیا و فرهنگ است. این رویکرد نتیجه‌ی تفکری است که تاریخ معماری هر ملت را حوزه‌ی معرفتی مستقلی می‌داند که می‌توان آن را مستقل از دیگر حوزه‌ها مطالعه کرد. مثلاً تاریخ معماری یک ملت معاصر ممکن است شامل قلمروهایی ‌شود که پیش‌تر مستقل بوده‌اند یا شامل مناطق متمایز زبانی‌ای شود که تاریخ معماری‌شان در دل گروه ملی یکپارچه و بزرگ‌تری محقق شده است. مهاجرت و استعمارگری و نیز مرزبندی‌های سده‌ی اخیر در این رویکرد تاریخ‌نگاشت معماری اثر دارد." 
 --- 
 <p><strong><span style="box-sizing: inherit; font-family: Roboto, -apple-system, 'apple color emoji', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; font-size: 16px; white-space-collapse: preserve; background-color: #ffffff;">۱۷</span><span style="font-family: Roboto, -apple-system, 'apple color emoji', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; font-size: 16px; white-space-collapse: preserve; background-color: #ffffff;">. </span><span style="box-sizing: inherit; font-family: Roboto, -apple-system, 'apple color emoji', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; font-size: 16px; white-space-collapse: preserve; background-color: #ffffff;"><em style="box-sizing: inherit;">تاریخ معماری چیست؟</em>(۲)</span></strong></p>
