--- a/_posts/2024-06-20-mCSzs.html
+++ b/_posts/2024-06-20-mCSzs.html
@@ -2,13 +2,13 @@
 title: "آواز تیشه امشب از بیستون نیامد/ گویا به خواب شیرین فرهاد رفته باشد " 
 authors: asmaneh 
 types: news 
-tags: فرهاد نظری,ارج‌نامه,آسمانه,مطالعات معماری ایران 
+tags: فرهاد,نظری,ارج‌نامه,آسمانه,مطالعات,معماری,ایران 
 featured: true
-featureImg: "/assets/img/posts/mCSzs." 
+featureImg: "/assets/img/posts/mCSzs.jpg" 
 attachedPDF: "/assets/pdf/mCSzs.pdf" 
 slug: mCSzs 
 gallery: 
-- image_path: "/assets/img/posts/mCSzs." 
+- image_path: "/assets/img/posts/mCSzs.jpg" 
   title: "آواز تیشه امشب از بیستون نیامد/ گویا به خواب شیرین فرهاد رفته باشد " 
  
 excerpt: "محقق ارزنده‌ی تاریخ معماری ایران، مرمتگر، و مدیر مؤثر میراث فرهنگی، فرهاد نظری، از دنیا رفت. " 
