--- a/_posts/2024-09-17-Wq2g4.html
+++ b/_posts/2024-09-17-Wq2g4.html
@@ -3,8 +3,12 @@ title: "پیامدهای نو-اروپامحوری و علم برای تاریخ
 authors: taheri 
 types: blog 
 featured: false
+featureImg: "/assets/img/posts/Wq2g4.jpg" 
+attachedPDF: "/assets/pdf/Wq2g4.pdf" 
 slug: Wq2g4 
 gallery: 
+- image_path: "/assets/img/posts/Wq2g4.jpg" 
+  title: "پیامدهای نو-اروپامحوری و علم برای تاریخ‌نگاری هنر و معماری اسلامی" 
 - image_path: "/assets/img/posts/Wq2g4-1.jpg" 
   title: "تصویر 1- مسجد اوبرن گالیپولی در سیدنی استرالیا. این مسجد در سال‌های ۱۹۸۶ تا ۱۹۹۹ برای جامعۀ ترک‌استرالیایی ساخته شد و تقلیدی ضعیف از معماری عثمانی‌ست. غیاب نهادی روایت‌ساز، مسلمانانی را که در جست‌وجوی بیان‌های هویت فرهنگی‌شان هستند در دام تصویرهای محبوب قدیمی می‌اندازد. " 
 - image_path: "/assets/img/posts/Wq2g4-2.jpg" 
